src/App.css
.container {
	display: flex;
    flex-direction: column;
	justify-content: center;
	background-color: black;
	width: 390pt !important;
	height: 844pt !important;
	margin: auto;
	padding-left: 0% !important;
}

.paddedColumn{
	padding-top: 5pt;
	padding-bottom: 5pt;
	padding-left: 8pt !important;
	padding-right: 8pt !important;
}

.flip-card {
	perspective: 1000px;
	width: 200px;
	height: 300px;
	position: relative;
	transform-style: preserve-3d;
	transition: transform 0.5s;
}

.flip-card.flipped {
	transform: rotateY(180deg);
}

.flip-card-inner {
	width: 100%;
	height: 100%;
	transform-style: preserve-3d;
}

.flip-card-front,
.flip-card-back {
	width: 100%;
	height: 100%;
	position: absolute;
	backface-visibility: hidden;
}

.flip-card-front {
	background-color: #d7fbda;
	color: green;
}

.flip-card-back {
	background-color: #fbd7f8;
	color: blue;
	transform: rotateY(180deg);
}

.card-content {
	padding: 20px;
	text-align: center;
}

.card{
	width: 110pt !important;
	height: 110pt !important;
	border: 15px solid white !important;
	border-radius: 20pt !important; 
	margin: 0px auto;
	background-color: #bc1b21 !important;
	background-image: url('assets/GamePage/Logo_60x60.svg');
	background-size: 65%;
	background-repeat: no-repeat;
	background-position: center;
	color: white; 
	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
}
  
.card-back-1{
	background: white;
	background-image: url('assets/OldGame/PascalSiakam.avif');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}
  
.card-back-2{
	background: white;
	background-image: url('assets/OldGame/ScottieBarnes.avif');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}
  
.card-back-3{
	background: white;
	background-image: url('assets/OldGame/FredVanVleet.png');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}
  
.card-back-4{
	background: white;
	background-image: url('assets/OldGame/OGAnunoby.png');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}
  
.card-back-5{
	background: white;
	background-image: url('assets/OldGame/KyleLowry.png');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}
  
.card-back-6{
	background: white;
	background-image: url('assets/OldGame/DemarDerozan.png');
	background-size: cover; /* Adjust according to your design needs */
	background-position: center;
	color: white; /* Adjust text color for better visibility */
}

.backgroundContainer{
	align-items: center;
	margin-top: auto;
	margin-left: auto;
	margin-right: auto;
	width: 390pt;
	height: 30pt;
}

.teamNameBackground{
	width: 268pt;
	height: 30pt;
	border: 1pt solid #BC1B21;
	align-items: center;
	margin-top: auto;
	margin-left: auto;
	margin-right: auto;
	border-top-left-radius: 6pt;
	border-top-right-radius: 6pt;
	border-bottom: 0pt;
}

.teamName{
	color: #BC1B21;
	font-size: 14pt;
	letter-spacing: 7pt;
	text-align: center;
	padding-top: 4.67pt;
}

.red-back{
	width: 390pt;
	height: 700pt;
	background-color: #4C0B0E;
	background-image: url('assets/GamePage/Pattern_Mobile_SetTo100PercentWidth.svg');
	text-align: center;
	position: relative;
	border-top: 1pt solid #BC1B21;
	border-bottom: 1pt solid #BC1B21;
}

.topDesignRectangles{
	height: 10pt;
    width: 390pt;
	display: flex;
    justify-content: space-between;
}

.topLeftRectangle{
	height: 10pt;
	width: 61.5pt;
	border: 1pt solid #BC1B21;
	border-left: 0pt;
	border-top: 0pt;
	border-bottom-right-radius: 6pt;
}

.topRightRectangle{
	height: 10pt;
	width: 62pt;
	border: 1pt solid #BC1B21;
	border-right: 0pt;
	border-top: 0pt;
	border-bottom-left-radius: 6pt;
}

.matchContainer{
	padding-top: 4pt;
	padding-bottom: 14pt;
}

.matchLogo{
	width: 260pt;
	height: 55pt;
	background-image: url('assets/SignUpPage/MATCH.svg');
	background-repeat: no-repeat;
	background-position: center;
	margin: auto;
}

.board{
	height: 530pt;
	width: 370pt;
	background-color: #F0F0F0;
	border-radius: 10pt !important; 
	padding: 2pt;
	margin: auto;
}

.turnsText{
	font-size: 16pt;
	padding-top: 5pt;
	font-family: 'Proxima Nova';
}

.turns-label{
	color: black;
    font-weight: bold;
}

.turns-value {
	color: #BC1B21;
	font-weight: bold;
}

.restartButton{
	background: linear-gradient(#BC1B21, #5E0E11);
	width: 240pt;
	height: 50pt;
	display: table-cell;
	border-radius: 6pt !important; 
	margin: auto;
	color: white;
	font-size: 16pt;
	font-family: 'Proxima Nova';
	border-color: white;
	border-style: solid;
	letter-spacing: 5.6pt;
}

.restartBackground{
	background: black;
	width: 245pt;
	height: 55pt;
	border-radius: 9pt !important; 
	margin: auto;
	padding-top: 2.5pt;
}

.bottomDesignRectangles{
	height: 10pt;
    width: 390pt;
	display: flex;
    justify-content: space-between;
	position: absolute;
	bottom: 0;
}

.bottomLeftRectangle{
	height: 10pt;
	width: 106pt;
	border: 1pt solid #BC1B21;
	border-left: 0pt;
	border-bottom: 0pt;
	border-top-right-radius: 6pt;
}

.bottomRightRectangle{
	height: 10pt;
	width: 105.5pt;
	border: 1pt solid #BC1B21;
	border-right: 0pt;
	border-bottom: 0pt;
	border-top-left-radius: 6pt;
}

.sponsorColumn{
	padding-left: 0 !important;
	padding-right: 0 !important;
}

.sponsorContainer{
	align-items: center;
	margin-bottom: auto;
	margin-left: auto;
	margin-right: auto;
	width: 390pt;
	height: 50pt;
}

.sponsorBackground{
	width: 180pt;
	height: 50pt;
	border: 1pt solid #BC1B21;
	align-items: center;
	margin-top: auto;
	margin-left: auto;
	margin-right: auto;
	border-bottom-left-radius: 6pt;
	border-bottom-right-radius: 6pt;
	border-top: 0pt;
}

.sponsorName{
	color: white;
	font-size: 10pt;
	letter-spacing: 2pt;
	text-align: left;
	padding-left: 25pt;
	padding-top: 18pt;
}

.sponsorPicture{
	height: 23pt;
	width: 52pt;
	background-image: url('assets/GamePage/tdLogo.png');
	background-size: 100%;
	background-repeat: no-repeat;
	background-position: center;
	margin-right: auto;
	margin-top: 12.5pt;
}
  

